--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@ tmp*
 TMP*
 .idea
 docker-compose.yml~
-
+*/migrations/*
+!*/migrations/__init__.py
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
